etapa3/y.output
   0  $accept : program $end

   1  program : declarationList

   2  declarationList : variableDeclaration declarationList
   3                  | functDeclaration declarationList

   4  variableDeclaration : type IDENTIFIER ':' BOOL_LIT ';'
   5                      | type IDENTIFIER ':' INT_LIT ';'
   6                      | type IDENTIFIER ':' CHAR_LIT ';'
   7                      | type IDENTIFIER ':' STRING ';'
   8                      | type IDENTIFIER '[' INT_LIT ']' ':' arrayInitLiterals ';'
   9                      | type IDENTIFIER '[' INT_LIT ']' ';'

  10  arrayInitLiterals : BOOL_LIT arrayInitLiterals
  11                    | INT_LIT arrayInitLiterals
  12                    | CHAR_LIT arrayInitLiterals
  13                    | STRING arrayInitLiterals
  14                    | IDENTIFIER arrayInitLiterals
  15                    |

  16  functDeclaration : type IDENTIFIER '(' functParamsDef ')' commandBlock ';'

  17  functParamsDef : type IDENTIFIER functParamsDefCont
  18                 |

  19  functParamsDefCont : ',' type IDENTIFIER functParamsDefCont
  20                     |

  21  commandBlock : '{' commandBlockList '}'

  22  commandBlockList : command ';' commandBlockListCont

  23  commandBlockListCont : command ';' commandBlockListCont
  24                       |

  25  command : PRINT printList
  26          | RETURN expression
  27          | READ IDENTIFIER
  28          | IDENTIFIER '=' expression
  29          | IDENTIFIER '[' expression ']' '=' expression
  30          | IF '(' expression ')' THEN command ELSE command
  31          | IF '(' expression ')' THEN command
  32          | FOR '(' expression ')' command
  33          | FOR '(' IDENTIFIER '=' expression TO expression ')' command
  34          | commandBlock
  35          |

  36  printList : STRING printList
  37            | expression printList
  38            |

  39  functCall : IDENTIFIER '(' functParams ')'

  40  functParams : IDENTIFIER functParamsCont
  41              | INT_LIT functParamsCont
  42              | CHAR_LIT functParamsCont
  43              | STRING functParamsCont
  44              | BOOL_LIT functParamsCont

  45  functParamsCont : ',' functParams
  46                  |

  47  expression : '(' expression ')'
  48             | functCall
  49             | INT_LIT
  50             | CHAR_LIT
  51             | BOOL_LIT
  52             | IDENTIFIER
  53             | IDENTIFIER '[' expression ']'
  54             | expression EQUAL expression
  55             | expression DIFFERENT expression
  56             | expression LESS_THEN expression
  57             | expression GREATHER_THEN expression
  58             | expression OR expression
  59             | expression AND expression
  60             | expression '+' expression
  61             | expression '-' expression
  62             | expression '/' expression
  63             | expression '*' expression

  64  type : KW_INT
  65       | KW_CHAR
  66       | KW_BOOL
  67       | KW_REAL

state 0
	$accept : . program $end  (0)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	.  error

	program  goto 5
	declarationList  goto 6
	variableDeclaration  goto 7
	functDeclaration  goto 8
	type  goto 9


state 1
	type : KW_INT .  (64)

	.  reduce 64


state 2
	type : KW_CHAR .  (65)

	.  reduce 65


state 3
	type : KW_BOOL .  (66)

	.  reduce 66


state 4
	type : KW_REAL .  (67)

	.  reduce 67


state 5
	$accept : program . $end  (0)

	$end  accept


state 6
	program : declarationList .  (1)

	.  reduce 1


state 7
	declarationList : variableDeclaration . declarationList  (2)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	.  error

	declarationList  goto 10
	variableDeclaration  goto 7
	functDeclaration  goto 8
	type  goto 9


state 8
	declarationList : functDeclaration . declarationList  (3)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	.  error

	declarationList  goto 11
	variableDeclaration  goto 7
	functDeclaration  goto 8
	type  goto 9


state 9
	variableDeclaration : type . IDENTIFIER ':' BOOL_LIT ';'  (4)
	variableDeclaration : type . IDENTIFIER ':' INT_LIT ';'  (5)
	variableDeclaration : type . IDENTIFIER ':' CHAR_LIT ';'  (6)
	variableDeclaration : type . IDENTIFIER ':' STRING ';'  (7)
	variableDeclaration : type . IDENTIFIER '[' INT_LIT ']' ':' arrayInitLiterals ';'  (8)
	variableDeclaration : type . IDENTIFIER '[' INT_LIT ']' ';'  (9)
	functDeclaration : type . IDENTIFIER '(' functParamsDef ')' commandBlock ';'  (16)

	IDENTIFIER  shift 12
	.  error


state 10
	declarationList : variableDeclaration declarationList .  (2)

	.  reduce 2


state 11
	declarationList : functDeclaration declarationList .  (3)

	.  reduce 3


state 12
	variableDeclaration : type IDENTIFIER . ':' BOOL_LIT ';'  (4)
	variableDeclaration : type IDENTIFIER . ':' INT_LIT ';'  (5)
	variableDeclaration : type IDENTIFIER . ':' CHAR_LIT ';'  (6)
	variableDeclaration : type IDENTIFIER . ':' STRING ';'  (7)
	variableDeclaration : type IDENTIFIER . '[' INT_LIT ']' ':' arrayInitLiterals ';'  (8)
	variableDeclaration : type IDENTIFIER . '[' INT_LIT ']' ';'  (9)
	functDeclaration : type IDENTIFIER . '(' functParamsDef ')' commandBlock ';'  (16)

	':'  shift 13
	'['  shift 14
	'('  shift 15
	.  error


state 13
	variableDeclaration : type IDENTIFIER ':' . BOOL_LIT ';'  (4)
	variableDeclaration : type IDENTIFIER ':' . INT_LIT ';'  (5)
	variableDeclaration : type IDENTIFIER ':' . CHAR_LIT ';'  (6)
	variableDeclaration : type IDENTIFIER ':' . STRING ';'  (7)

	CHAR_LIT  shift 16
	INT_LIT  shift 17
	BOOL_LIT  shift 18
	STRING  shift 19
	.  error


state 14
	variableDeclaration : type IDENTIFIER '[' . INT_LIT ']' ':' arrayInitLiterals ';'  (8)
	variableDeclaration : type IDENTIFIER '[' . INT_LIT ']' ';'  (9)

	INT_LIT  shift 20
	.  error


state 15
	functDeclaration : type IDENTIFIER '(' . functParamsDef ')' commandBlock ';'  (16)
	functParamsDef : .  (18)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	')'  reduce 18

	functParamsDef  goto 21
	type  goto 22


state 16
	variableDeclaration : type IDENTIFIER ':' CHAR_LIT . ';'  (6)

	';'  shift 23
	.  error


state 17
	variableDeclaration : type IDENTIFIER ':' INT_LIT . ';'  (5)

	';'  shift 24
	.  error


state 18
	variableDeclaration : type IDENTIFIER ':' BOOL_LIT . ';'  (4)

	';'  shift 25
	.  error


state 19
	variableDeclaration : type IDENTIFIER ':' STRING . ';'  (7)

	';'  shift 26
	.  error


state 20
	variableDeclaration : type IDENTIFIER '[' INT_LIT . ']' ':' arrayInitLiterals ';'  (8)
	variableDeclaration : type IDENTIFIER '[' INT_LIT . ']' ';'  (9)

	']'  shift 27
	.  error


state 21
	functDeclaration : type IDENTIFIER '(' functParamsDef . ')' commandBlock ';'  (16)

	')'  shift 28
	.  error


state 22
	functParamsDef : type . IDENTIFIER functParamsDefCont  (17)

	IDENTIFIER  shift 29
	.  error


state 23
	variableDeclaration : type IDENTIFIER ':' CHAR_LIT ';' .  (6)

	.  reduce 6


state 24
	variableDeclaration : type IDENTIFIER ':' INT_LIT ';' .  (5)

	.  reduce 5


state 25
	variableDeclaration : type IDENTIFIER ':' BOOL_LIT ';' .  (4)

	.  reduce 4


state 26
	variableDeclaration : type IDENTIFIER ':' STRING ';' .  (7)

	.  reduce 7


state 27
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' . ':' arrayInitLiterals ';'  (8)
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' . ';'  (9)

	':'  shift 30
	';'  shift 31
	.  error


state 28
	functDeclaration : type IDENTIFIER '(' functParamsDef ')' . commandBlock ';'  (16)

	'{'  shift 32
	.  error

	commandBlock  goto 33


state 29
	functParamsDef : type IDENTIFIER . functParamsDefCont  (17)
	functParamsDefCont : .  (20)

	','  shift 34
	')'  reduce 20

	functParamsDefCont  goto 35


state 30
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' ':' . arrayInitLiterals ';'  (8)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 15

	arrayInitLiterals  goto 41


state 31
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' ';' .  (9)

	.  reduce 9


state 32
	commandBlock : '{' . commandBlockList '}'  (21)
	command : .  (35)

	READ  shift 42
	PRINT  shift 43
	RETURN  shift 44
	FOR  shift 45
	IF  shift 46
	IDENTIFIER  shift 47
	'{'  shift 32
	';'  reduce 35

	commandBlock  goto 48
	commandBlockList  goto 49
	command  goto 50


state 33
	functDeclaration : type IDENTIFIER '(' functParamsDef ')' commandBlock . ';'  (16)

	';'  shift 51
	.  error


state 34
	functParamsDefCont : ',' . type IDENTIFIER functParamsDefCont  (19)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	.  error

	type  goto 52


state 35
	functParamsDef : type IDENTIFIER functParamsDefCont .  (17)

	.  reduce 17


state 36
	arrayInitLiterals : CHAR_LIT . arrayInitLiterals  (12)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 15

	arrayInitLiterals  goto 53


state 37
	arrayInitLiterals : INT_LIT . arrayInitLiterals  (11)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 15

	arrayInitLiterals  goto 54


state 38
	arrayInitLiterals : BOOL_LIT . arrayInitLiterals  (10)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 15

	arrayInitLiterals  goto 55


state 39
	arrayInitLiterals : IDENTIFIER . arrayInitLiterals  (14)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 15

	arrayInitLiterals  goto 56


state 40
	arrayInitLiterals : STRING . arrayInitLiterals  (13)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 15

	arrayInitLiterals  goto 57


state 41
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' ':' arrayInitLiterals . ';'  (8)

	';'  shift 58
	.  error


state 42
	command : READ . IDENTIFIER  (27)

	IDENTIFIER  shift 59
	.  error


state 43
	command : PRINT . printList  (25)
	printList : .  (38)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	STRING  shift 64
	'('  shift 65
	ELSE  reduce 38
	';'  reduce 38

	printList  goto 66
	functCall  goto 67
	expression  goto 68


state 44
	command : RETURN . expression  (26)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 69


state 45
	command : FOR . '(' expression ')' command  (32)
	command : FOR . '(' IDENTIFIER '=' expression TO expression ')' command  (33)

	'('  shift 70
	.  error


state 46
	command : IF . '(' expression ')' THEN command ELSE command  (30)
	command : IF . '(' expression ')' THEN command  (31)

	'('  shift 71
	.  error


state 47
	command : IDENTIFIER . '=' expression  (28)
	command : IDENTIFIER . '[' expression ']' '=' expression  (29)

	'['  shift 72
	'='  shift 73
	.  error


state 48
	command : commandBlock .  (34)

	.  reduce 34


state 49
	commandBlock : '{' commandBlockList . '}'  (21)

	'}'  shift 74
	.  error


state 50
	commandBlockList : command . ';' commandBlockListCont  (22)

	';'  shift 75
	.  error


state 51
	functDeclaration : type IDENTIFIER '(' functParamsDef ')' commandBlock ';' .  (16)

	.  reduce 16


state 52
	functParamsDefCont : ',' type . IDENTIFIER functParamsDefCont  (19)

	IDENTIFIER  shift 76
	.  error


state 53
	arrayInitLiterals : CHAR_LIT arrayInitLiterals .  (12)

	.  reduce 12


state 54
	arrayInitLiterals : INT_LIT arrayInitLiterals .  (11)

	.  reduce 11


state 55
	arrayInitLiterals : BOOL_LIT arrayInitLiterals .  (10)

	.  reduce 10


state 56
	arrayInitLiterals : IDENTIFIER arrayInitLiterals .  (14)

	.  reduce 14


state 57
	arrayInitLiterals : STRING arrayInitLiterals .  (13)

	.  reduce 13


state 58
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' ':' arrayInitLiterals ';' .  (8)

	.  reduce 8


state 59
	command : READ IDENTIFIER .  (27)

	.  reduce 27


state 60
	expression : CHAR_LIT .  (50)

	.  reduce 50


state 61
	expression : INT_LIT .  (49)

	.  reduce 49


state 62
	expression : BOOL_LIT .  (51)

	.  reduce 51


63: shift/reduce conflict (shift 78, reduce 52) on '('
state 63
	functCall : IDENTIFIER . '(' functParams ')'  (39)
	expression : IDENTIFIER .  (52)
	expression : IDENTIFIER . '[' expression ']'  (53)

	'['  shift 77
	'('  shift 78
	TO  reduce 52
	ELSE  reduce 52
	EQUAL  reduce 52
	DIFFERENT  reduce 52
	LESS_THEN  reduce 52
	GREATHER_THEN  reduce 52
	OR  reduce 52
	AND  reduce 52
	CHAR_LIT  reduce 52
	INT_LIT  reduce 52
	BOOL_LIT  reduce 52
	IDENTIFIER  reduce 52
	STRING  reduce 52
	'-'  reduce 52
	'+'  reduce 52
	'/'  reduce 52
	'*'  reduce 52
	';'  reduce 52
	']'  reduce 52
	')'  reduce 52


state 64
	printList : STRING . printList  (36)
	printList : .  (38)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	STRING  shift 64
	'('  shift 65
	ELSE  reduce 38
	';'  reduce 38

	printList  goto 79
	functCall  goto 67
	expression  goto 68


state 65
	expression : '(' . expression ')'  (47)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 80


state 66
	command : PRINT printList .  (25)

	.  reduce 25


state 67
	expression : functCall .  (48)

	.  reduce 48


state 68
	printList : expression . printList  (37)
	expression : expression . EQUAL expression  (54)
	expression : expression . DIFFERENT expression  (55)
	expression : expression . LESS_THEN expression  (56)
	expression : expression . GREATHER_THEN expression  (57)
	expression : expression . OR expression  (58)
	expression : expression . AND expression  (59)
	expression : expression . '+' expression  (60)
	expression : expression . '-' expression  (61)
	expression : expression . '/' expression  (62)
	expression : expression . '*' expression  (63)
	printList : .  (38)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	STRING  shift 64
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	'('  shift 65
	ELSE  reduce 38
	';'  reduce 38

	printList  goto 91
	functCall  goto 67
	expression  goto 68


state 69
	command : RETURN expression .  (26)
	expression : expression . EQUAL expression  (54)
	expression : expression . DIFFERENT expression  (55)
	expression : expression . LESS_THEN expression  (56)
	expression : expression . GREATHER_THEN expression  (57)
	expression : expression . OR expression  (58)
	expression : expression . AND expression  (59)
	expression : expression . '+' expression  (60)
	expression : expression . '-' expression  (61)
	expression : expression . '/' expression  (62)
	expression : expression . '*' expression  (63)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	ELSE  reduce 26
	';'  reduce 26


state 70
	command : FOR '(' . expression ')' command  (32)
	command : FOR '(' . IDENTIFIER '=' expression TO expression ')' command  (33)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 92
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 93


state 71
	command : IF '(' . expression ')' THEN command ELSE command  (30)
	command : IF '(' . expression ')' THEN command  (31)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 94


state 72
	command : IDENTIFIER '[' . expression ']' '=' expression  (29)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 95


state 73
	command : IDENTIFIER '=' . expression  (28)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 96


state 74
	commandBlock : '{' commandBlockList '}' .  (21)

	.  reduce 21


state 75
	commandBlockList : command ';' . commandBlockListCont  (22)
	commandBlockListCont : .  (24)
	command : .  (35)

	READ  shift 42
	PRINT  shift 43
	RETURN  shift 44
	FOR  shift 45
	IF  shift 46
	IDENTIFIER  shift 47
	'{'  shift 32
	';'  reduce 35
	'}'  reduce 24

	commandBlock  goto 48
	commandBlockListCont  goto 97
	command  goto 98


state 76
	functParamsDefCont : ',' type IDENTIFIER . functParamsDefCont  (19)
	functParamsDefCont : .  (20)

	','  shift 34
	')'  reduce 20

	functParamsDefCont  goto 99


state 77
	expression : IDENTIFIER '[' . expression ']'  (53)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 100


state 78
	functCall : IDENTIFIER '(' . functParams ')'  (39)

	CHAR_LIT  shift 101
	INT_LIT  shift 102
	BOOL_LIT  shift 103
	IDENTIFIER  shift 104
	STRING  shift 105
	.  error

	functParams  goto 106


state 79
	printList : STRING printList .  (36)

	.  reduce 36


state 80
	expression : '(' expression . ')'  (47)
	expression : expression . EQUAL expression  (54)
	expression : expression . DIFFERENT expression  (55)
	expression : expression . LESS_THEN expression  (56)
	expression : expression . GREATHER_THEN expression  (57)
	expression : expression . OR expression  (58)
	expression : expression . AND expression  (59)
	expression : expression . '+' expression  (60)
	expression : expression . '-' expression  (61)
	expression : expression . '/' expression  (62)
	expression : expression . '*' expression  (63)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	')'  shift 107
	.  error


state 81
	expression : expression EQUAL . expression  (54)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 108


state 82
	expression : expression DIFFERENT . expression  (55)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 109


state 83
	expression : expression LESS_THEN . expression  (56)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 110


state 84
	expression : expression GREATHER_THEN . expression  (57)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 111


state 85
	expression : expression OR . expression  (58)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 112


state 86
	expression : expression AND . expression  (59)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 113


state 87
	expression : expression '-' . expression  (61)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 114


state 88
	expression : expression '+' . expression  (60)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 115


state 89
	expression : expression '/' . expression  (62)
